--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,11 +1,6 @@
 name: Build
 
-on:
-  push: 
-    branches: main
-  pull_request:
-    types:
-      - opened
+on: [push, pull_request]
 
 jobs:
   build-site:
