--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "gatsby": "^5.12.4",
     "gatsby-plugin-sass": "^6.12.0",
+    "gatsby-source-filesystem": "^5.13.0",
+    "gatsby-transformer-remark": "^6.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.68.0"
